# python_testing

./: .coveragerc  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: testing.yml
coverage/: index.html
docs/: coverage.md  index.md  intro.md  pytest.md
intro/: index.html
pytdd/: objetos_numpy.py  objetos_pandas.py  objetos_python.py  sin_test.py
pytest/: index.html
search/: search_index.json
tests/: conftest.py  dataframe_file.csv  test_objetos_numpy.py  test_objetos_pandas.py  test_objetos_python.py
