[tool.poetry]
name = "pytdd"
version = "0.1.0"
description = "python testing"
authors = ["Francisco Alfaro <francisco.alfaro.496@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pandas = "^1.5.1"



[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
pre-commit = "^2.20.0"
black = "^22.10.0"
flake8 = "^5.0.4"
